--- a/T-academy/DL1.derivative_tangent_line.ipynb
+++ b/T-academy/DL1.derivative_tangent_line.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 마이캠퍼스 한대희 , daehee@mycampus.io, 010-2101-0255\n",
+    "* 데이터분석/인공지능을 위한 딥러닝 스쿨 --> http://bit.ly/2TXlJJ4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "출처: 밑바닥부터 딥러닝. https://github.com/WegraLee/deep-learning-from-scratch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "hH4LfqPIIn9N"
