--- a/T-academy/EX0.python_numpy_basic.ipynb
+++ b/T-academy/EX0.python_numpy_basic.ipynb
@@ -4,19 +4,11 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "QxRD3XMSLcnX"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
     "id": "hH4LfqPIIn9N"
    },
    "source": [
-    "#### 마이캠퍼스 한대희 , daehee@mycampus.io\n",
-    "#### 딥러닝 스쿨 --> http://bit.ly/2TXlJJ4\n",
+    "* 마이캠퍼스 한대희 , daehee@mycampus.io, 010-2101-0255\n",
+    "* 데이터분석/인공지능을 위한 딥러닝 스쿨 --> http://bit.ly/2TXlJJ4\n",
     "\n",
     "# 함수만들기\n",
     " \n",
