--- a/T-academy/EX8_PCA_iris.ipynb
+++ b/T-academy/EX8_PCA_iris.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 마이캠퍼스 한대희 , daehee@mycampus.io, 010-2101-0255\n",
+    "* 데이터분석/인공지능을 위한 딥러닝 스쿨 --> http://bit.ly/2TXlJJ4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "출처 - https://datascienceschool.net/view-notebook/f10aad8a34a4489697933f77c5d58e3a/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "GBELa_nLrkZr",
