--- a/T-academy/LA2.basis.ipynb
+++ b/T-academy/LA2.basis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 마이캠퍼스 한대희 , daehee@mycampus.io, 010-2101-0255\n",
+    "* 데이터분석/인공지능을 위한 딥러닝 스쿨 --> http://bit.ly/2TXlJJ4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
